adding conf cache

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.parallel=true
 
 # Not encouraged by Gradle and can produce weird results. Wait for isolated projects instead.
 org.gradle.configureondemand=false
-
+org.gradle.unsafe.configuration-cache=true
 # Enable caching between builds.
 org.gradle.caching=true
 org.gradle.workers.max=12
