--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -17,19 +17,8 @@ jobs:
           ./gradlew :core:model:compileKotlin
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
-  liberica:
-    strategy:
-      matrix:
-        java: [3]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v3
         with:
-          distribution: liberica
-          java-version: 11
-      - name: Execute Gradle build
-        run: |
-          ./gradlew :core:model:compileKotlin
-        env:
-          GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
+          path: .gradle/*
+          if-no-files-found: error
